fix: Navbar correctly is removed on smaller screen sizes

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -110,3 +110,10 @@
         font-size: 15px;
     }
 }
+
+@media (max-width: 750px) {
+
+    .navbar-menu {
+        display: none
+    }
+}
